logs/autodialer.log
INFO 2025-07-16 12:15:37,039 basehttp 16184 30280 "GET /agents/phone/status/ HTTP/1.1" 200 115
INFO 2025-07-16 12:15:43,727 basehttp 16184 30280 "GET /campaigns/ HTTP/1.1" 200 77714
INFO 2025-07-16 12:15:50,722 basehttp 16184 30280 "GET /campaigns/1/ HTTP/1.1" 200 51358
WARNING 2025-07-16 12:15:51,009 log 16184 12468 Not Found: /ws/campaign/1/
WARNING 2025-07-16 12:15:51,009 basehttp 16184 12468 "GET /ws/campaign/1/ HTTP/1.1" 404 3287
WARNING 2025-07-16 12:15:56,042 log 16184 30652 Not Found: /ws/campaign/1/
WARNING 2025-07-16 12:15:56,043 basehttp 16184 30652 "GET /ws/campaign/1/ HTTP/1.1" 404 3287
WARNING 2025-07-16 12:16:01,070 log 16184 22600 Not Found: /ws/campaign/1/
WARNING 2025-07-16 12:16:01,071 basehttp 16184 22600 "GET /ws/campaign/1/ HTTP/1.1" 404 3287
WARNING 2025-07-16 12:16:06,107 log 16184 17620 Not Found: /ws/campaign/1/
WARNING 2025-07-16 12:16:06,107 basehttp 16184 17620 "GET /ws/campaign/1/ HTTP/1.1" 404 3287
WARNING 2025-07-16 12:16:11,144 log 16184 11804 Not Found: /ws/campaign/1/
WARNING 2025-07-16 12:16:11,145 basehttp 16184 11804 "GET /ws/campaign/1/ HTTP/1.1" 404 3287
ERROR 2025-07-16 12:16:12,551 log 16184 30280 Internal Server Error: /campaigns/1/agents/
Traceback (most recent call last):
  File "C:\Users\shiwansh\autodialer_project\venv\Lib\site-packages\django\core\handlers\exception.py", line 55, in inner
    response = get_response(request)
  File "C:\Users\shiwansh\autodialer_project\venv\Lib\site-packages\django\core\handlers\base.py", line 197, in _get_response
    response = wrapped_callback(request, *callback_args, **callback_kwargs)
  File "C:\Users\shiwansh\autodialer_project\venv\Lib\site-packages\django\views\generic\base.py", line 104, in view
    return self.dispatch(request, *args, **kwargs)
           ~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\shiwansh\autodialer_project\venv\Lib\site-packages\django\contrib\auth\mixins.py", line 73, in dispatch
    return super().dispatch(request, *args, **kwargs)
           ~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\shiwansh\autodialer_project\venv\Lib\site-packages\django\contrib\auth\mixins.py", line 135, in dispatch
    return super().dispatch(request, *args, **kwargs)
           ~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\shiwansh\autodialer_project\venv\Lib\site-packages\django\views\generic\base.py", line 143, in dispatch
    return handler(request, *args, **kwargs)
  File "C:\Users\shiwansh\autodialer_project\campaigns\views.py", line 371, in get
    return render(request, self.template_name, context)
  File "C:\Users\shiwansh\autodialer_project\venv\Lib\site-packages\django\shortcuts.py", line 25, in render
    content = loader.render_to_string(template_name, context, request, using=using)
  File "C:\Users\shiwansh\autodialer_project\venv\Lib\site-packages\django\template\loader.py", line 61, in render_to_string
    template = get_template(template_name, using=using)
  File "C:\Users\shiwansh\autodialer_project\venv\Lib\site-packages\django\template\loader.py", line 15, in get_template
    return engine.get_template(template_name)
           ~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^
  File "C:\Users\shiwansh\autodialer_project\venv\Lib\site-packages\django\template\backends\django.py", line 33, in get_template
    return Template(self.engine.get_template(template_name), self)
                    ~~~~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^
  File "C:\Users\shiwansh\autodialer_project\venv\Lib\site-packages\django\template\engine.py", line 177, in get_template
    template, origin = self.find_template(template_name)
                       ~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^
  File "C:\Users\shiwansh\autodialer_project\venv\Lib\site-packages\django\template\engine.py", line 159, in find_template
    template = loader.get_template(name, skip=skip)
  File "C:\Users\shiwansh\autodialer_project\venv\Lib\site-packages\django\template\loaders\cached.py", line 57, in get_template
    template = super().get_template(template_name, skip)
  File "C:\Users\shiwansh\autodialer_project\venv\Lib\site-packages\django\template\loaders\base.py", line 28, in get_template
    return Template(
        contents,
    ...<2 lines>...
        self.engine,
    )
  File "C:\Users\shiwansh\autodialer_project\venv\Lib\site-packages\django\template\base.py", line 154, in __init__
    self.nodelist = self.compile_nodelist()
                    ~~~~~~~~~~~~~~~~~~~~~^^
  File "C:\Users\shiwansh\autodialer_project\venv\Lib\site-packages\django\template\base.py", line 196, in compile_nodelist
    return parser.parse()
           ~~~~~~~~~~~~^^
  File "C:\Users\shiwansh\autodialer_project\venv\Lib\site-packages\django\template\base.py", line 510, in parse
    raise self.error(token, e)
  File "C:\Users\shiwansh\autodialer_project\venv\Lib\site-packages\django\template\base.py", line 508, in parse
    compiled_result = compile_func(self, token)
  File "C:\Users\shiwansh\autodialer_project\venv\Lib\site-packages\django\template\loader_tags.py", line 295, in do_extends
    nodelist = parser.parse()
  File "C:\Users\shiwansh\autodialer_project\venv\Lib\site-packages\django\template\base.py", line 510, in parse
    raise self.error(token, e)
  File "C:\Users\shiwansh\autodialer_project\venv\Lib\site-packages\django\template\base.py", line 508, in parse
    compiled_result = compile_func(self, token)
  File "C:\Users\shiwansh\autodialer_project\venv\Lib\site-packages\django\template\loader_tags.py", line 234, in do_block
    nodelist = parser.parse(("endblock",))
  File "C:\Users\shiwansh\autodialer_project\venv\Lib\site-packages\django\template\base.py", line 510, in parse
    raise self.error(token, e)
  File "C:\Users\shiwansh\autodialer_project\venv\Lib\site-packages\django\template\base.py", line 508, in parse
    compiled_result = compile_func(self, token)
  File "C:\Users\shiwansh\autodialer_project\venv\Lib\site-packages\django\template\defaulttags.py", line 961, in do_if
    nodelist = parser.parse(("elif", "else", "endif"))
  File "C:\Users\shiwansh\autodialer_project\venv\Lib\site-packages\django\template\base.py", line 510, in parse
    raise self.error(token, e)
  File "C:\Users\shiwansh\autodialer_project\venv\Lib\site-packages\django\template\base.py", line 508, in parse
    compiled_result = compile_func(self, token)
  File "C:\Users\shiwansh\autodialer_project\venv\Lib\site-packages\django\template\defaulttags.py", line 861, in do_for
    nodelist_loop = parser.parse(
        (
    ...<2 lines>...
        )
    )
  File "C:\Users\shiwansh\autodialer_project\venv\Lib\site-packages\django\template\base.py", line 510, in parse
    raise self.error(token, e)
  File "C:\Users\shiwansh\autodialer_project\venv\Lib\site-packages\django\template\base.py", line 508, in parse
    compiled_result = compile_func(self, token)
  File "C:\Users\shiwansh\autodialer_project\venv\Lib\site-packages\django\template\defaulttags.py", line 961, in do_if
    nodelist = parser.parse(("elif", "else", "endif"))
  File "C:\Users\shiwansh\autodialer_project\venv\Lib\site-packages\django\template\base.py", line 481, in parse
    raise self.error(token, e)
  File "C:\Users\shiwansh\autodialer_project\venv\Lib\site-packages\django\template\base.py", line 479, in parse
    filter_expression = self.compile_filter(token.contents)
  File "C:\Users\shiwansh\autodialer_project\venv\Lib\site-packages\django\template\base.py", line 597, in compile_filter
    return FilterExpression(token, self)
  File "C:\Users\shiwansh\autodialer_project\venv\Lib\site-packages\django\template\base.py", line 693, in __init__
    filter_func = parser.find_filter(filter_name)
  File "C:\Users\shiwansh\autodialer_project\venv\Lib\site-packages\django\template\base.py", line 603, in find_filter
    raise TemplateSyntaxError("Invalid filter: '%s'" % filter_name)
django.template.exceptions.TemplateSyntaxError: Invalid filter: 'mul'
ERROR 2025-07-16 12:16:12,563 basehttp 16184 30280 "GET /campaigns/1/agents/ HTTP/1.1" 500 361390
INFO 2025-07-16 12:30:32,964 autoreload 30672 27232 Watching for file changes with StatReloader
INFO 2025-07-16 12:30:55,169 basehttp 30672 14780 "GET /campaigns/1/agents/ HTTP/1.1" 200 47399
INFO 2025-07-16 12:39:25,318 autoreload 30672 27232 C:\Users\shiwansh\autodialer_project\campaigns\views.py changed, reloading.
INFO 2025-07-16 12:39:25,999 autoreload 17144 21460 Watching for file changes with StatReloader
